Link to Colab is added

--- a/classic_ml/01_Introduction.ipynb
+++ b/classic_ml/01_Introduction.ipynb
@@ -10,12 +10,14 @@
     "\n",
     "Life Satisfaction Data - [https://stats.oecd.org/index.aspx?DataSetCode=BLI](https://stats.oecd.org/index.aspx?DataSetCode=BLI)\n",
     "\n",
-    "Example from the book Hands-On Machine Learning with Scikit-Learn and TensorFlow by Aurélien Géron"
+    "Example from the book Hands-On Machine Learning with Scikit-Learn and TensorFlow by Aurélien Géron\n",
+    "\n",
+    "Notebook on the [Google Colab](https://colab.research.google.com/drive/1yl7pDuK2UMkMaN5zoJRg9EDXZXHkgWJz)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
        "4     Units                    NaN               NaN    1.8        NaN   NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +409,7 @@
        "2863                    NaN               NaN    6.6        NaN   NaN  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +462,7 @@
        "      <td>Units</td>\n",
        "      <td>See notes for:  Gross domestic product, curren...</td>\n",
        "      <td>572.163</td>\n",
-       "      <td>2013.0</td>\n",
+       "      <td>2013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -470,7 +472,7 @@
        "      <td>Units</td>\n",
        "      <td>See notes for:  Gross domestic product, curren...</td>\n",
        "      <td>4520.268</td>\n",
-       "      <td>2011.0</td>\n",
+       "      <td>2011</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -480,7 +482,7 @@
        "      <td>Units</td>\n",
        "      <td>See notes for:  Gross domestic product, curren...</td>\n",
        "      <td>4225.004</td>\n",
-       "      <td>2016.0</td>\n",
+       "      <td>2016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -490,7 +492,7 @@
        "      <td>Units</td>\n",
        "      <td>See notes for:  Gross domestic product, curren...</td>\n",
        "      <td>4401.432</td>\n",
-       "      <td>2015.0</td>\n",
+       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -500,7 +502,7 @@
        "      <td>Units</td>\n",
        "      <td>See notes for:  Gross domestic product, curren...</td>\n",
        "      <td>16826.192</td>\n",
-       "      <td>2011.0</td>\n",
+       "      <td>2011</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -522,14 +524,14 @@
        "4  U.S. dollars  Units  See notes for:  Gross domestic product, curren...   \n",
        "\n",
        "        2017  Estimates Start After  \n",
-       "0    572.163                 2013.0  \n",
-       "1   4520.268                 2011.0  \n",
-       "2   4225.004                 2016.0  \n",
-       "3   4401.432                 2015.0  \n",
-       "4  16826.192                 2011.0  "
+       "0    572.163                   2013  \n",
+       "1   4520.268                   2011  \n",
+       "2   4225.004                   2016  \n",
+       "3   4401.432                   2015  \n",
+       "4  16826.192                   2011  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +874,7 @@
        "Luxembourg           107708.217                6.9"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -913,16 +915,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x27561638860>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x20824695240>"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -943,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +994,7 @@
        "Luxembourg      107708.217                6.9"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,18 +1021,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare Data\n",
-    "gdp = np.c_[country_stats[\"GDP per capita\"]]\n",
-    "life_sat = np.c_[country_stats[\"Life satisfaction\"]]"
+    "gdp = country_stats[\"GDP per capita\"].values.reshape(-1, 1)\n",
+    "life_sat = country_stats[\"Life satisfaction\"].values.reshape(-1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1045,7 @@
        "       [10434.023]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1069,7 @@
        "       [5.5]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1085,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1096,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1108,7 +1110,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1117,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1126,13 +1127,13 @@
        "array([[6.71210214]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(44999)"
+    "model.predict([[44999]])"
    ]
   },
   {
@@ -1144,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1163,7 @@
        "(5.660020640588442, 2.338010836985739e-05)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1173,16 +1174,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x275633a8780>]"
+       "[<matplotlib.lines.Line2D at 0x20826839978>]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1205,7 +1206,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "          weights='uniform')"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1269,14 +1269,21 @@
        "array([[7.26666667]])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "knn.predict(44999)"
+    "knn.predict([[44999]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
