Edited classification example

--- a/classic_ml/04_Classification.ipynb
+++ b/classic_ml/04_Classification.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example of Classification task"
+    "# Example of Classification task\n",
+    "\n",
+    "[Notebook on Colab](https://colab.research.google.com/drive/1c5svU97BKXJGr8q-XM8QU2tnXOFyLCfs)."
    ]
   },
   {
